--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,6 +8,10 @@ espressoCore = "3.5.1"
 lifecycleRuntimeKtx = "2.8.2"
 activityCompose = "1.9.0"
 composeBom = "2023.08.00"
+googleServices = "4.4.2"
+firebaseFirestore = "25.0.0"
+navigationFragmentKtx = "2.7.7"
+navigationUiKtx = "2.7.7"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -25,7 +29,24 @@ androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-man
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
 
+androidx-constraintlayout = {module="androidx.constraintlayout:constraintlayout", version="2.1.4"}
+androidx-appcompat = { module = "androidx.appcompat:appcompat", version = "1.12.0" }
+#Firebase dependencies
+firebase-bom = { module = "com.google.firebase:firebase-bom", version = "33.1.1" }
+firebase-analytics = { module = "com.google.firebase:firebase-analytics", version = "22.0.2" }
+google-services = { group = "com.google.gms", name = "google-services", version.ref = "googleServices" }
+firebase-firestore = { group = "com.google.firebase", name = "firebase-firestore", version.ref = "firebaseFirestore" }
+
+#Jetpack Navigation Component
+androidx-legacy = { group = "androidx.legacy", name = "legacy-support-v4", version = "1.0.0" }
+androidx-navigation-fragment-ktx = { group = "androidx.navigation", name = "navigation-fragment-ktx", version.ref = "navigationFragmentKtx" }
+androidx-navigation-ui-ktx = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "navigationUiKtx" }
+
+androidx-lifecycle-livedata-ktx = { group = "androidx.lifecycle", name = "lifecycle-livedata-ktx", version = "2.8.3" }
+
+androidx-fragment = { group = "androidx.fragment", name = "fragment-ktx", version = "1.8.1" }
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
 jetbrainsKotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+googleServices = {id = "com.google.gms.google-services", version = "4.4.2"}
 
