--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -43,10 +43,16 @@ androidx-navigation-fragment-ktx = { group = "androidx.navigation", name = "navi
 androidx-navigation-ui-ktx = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "navigationUiKtx" }
 
 androidx-lifecycle-livedata-ktx = { group = "androidx.lifecycle", name = "lifecycle-livedata-ktx", version = "2.8.3" }
-
 androidx-fragment = { group = "androidx.fragment", name = "fragment-ktx", version = "1.8.1" }
+
+dagger-hilt-android = { group = "com.google.dagger", name = "hilt-android", version = "2.48.1" }
+dagger-hilt-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", version = "2.48.1" }
+#androidx-hilt-viewModel = { group = "androidx.hilt", name = "hilt-lifecycle-viewmodel", version = "1.0.0-alpha03" }
+androidx-hilt-compiler = { group = "androidx.hilt", name = "hilt-compiler", version = "1.2.0" }
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
 jetbrainsKotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 googleServices = {id = "com.google.gms.google-services", version = "4.4.2"}
-
+daggerHilt = { id = "com.google.dagger.hilt.android", version = "2.48.1" }
+ksp = { id = "com.google.devtools.ksp", version = "1.5.30-1.0.0" }
+kotlin-kapt = { id = "org.jetbrains.kotlin.kapt", version = "1.8.0" }
