--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -47,12 +47,11 @@ androidx-fragment = { group = "androidx.fragment", name = "fragment-ktx", versio
 
 dagger-hilt-android = { group = "com.google.dagger", name = "hilt-android", version = "2.48.1" }
 dagger-hilt-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", version = "2.48.1" }
-#androidx-hilt-viewModel = { group = "androidx.hilt", name = "hilt-lifecycle-viewmodel", version = "1.0.0-alpha03" }
 androidx-hilt-compiler = { group = "androidx.hilt", name = "hilt-compiler", version = "1.2.0" }
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
 jetbrainsKotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 googleServices = {id = "com.google.gms.google-services", version = "4.4.2"}
 daggerHilt = { id = "com.google.dagger.hilt.android", version = "2.48.1" }
-ksp = { id = "com.google.devtools.ksp", version = "1.5.30-1.0.0" }
 kotlin-kapt = { id = "org.jetbrains.kotlin.kapt", version = "1.8.0" }
+kotlin-parcelize = {id = "org.jetbrains.kotlin.plugin.parcelize", version= "1.8.10"}
