--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -29,13 +29,24 @@ androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-man
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
 
+google-services = { group = "com.google.gms", name = "google-services", version.ref = "googleServices" }
+androidx-viewpager = {module = "androidx.viewpager2:viewpager2", version = "1.1.0"}
 androidx-constraintlayout = {module="androidx.constraintlayout:constraintlayout", version="2.1.4"}
 androidx-appcompat = { module = "androidx.appcompat:appcompat", version = "1.12.0" }
+
 #Firebase dependencies
+firebase-auth = {module= "com.google.firebase:firebase-auth", version="23.0.0"}
 firebase-bom = { module = "com.google.firebase:firebase-bom", version = "33.1.1" }
+firebase-storage-ktx = {module = "com.google.firebase:firebase-storage-ktx", version="21.0.0"}
+firebase-database-ktx = {module = "com.google.firebase:firebase-database-ktx", version="21.0.0"}
 firebase-analytics = { module = "com.google.firebase:firebase-analytics", version = "22.0.2" }
-google-services = { group = "com.google.gms", name = "google-services", version.ref = "googleServices" }
 firebase-firestore = { group = "com.google.firebase", name = "firebase-firestore", version.ref = "firebaseFirestore" }
+
+#Gson
+#gson = {module = "com.google.code.gson:gson", version="2.8.9"}
+
+#Image Picker
+#image-picker = {module = "com.github.dhaval2404:imagepicker", version="2.1"}
 
 #Jetpack Navigation Component
 androidx-legacy = { group = "androidx.legacy", name = "legacy-support-v4", version = "1.0.0" }
