--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -43,7 +43,7 @@ firebase-analytics = { module = "com.google.firebase:firebase-analytics", versio
 firebase-firestore = { group = "com.google.firebase", name = "firebase-firestore", version.ref = "firebaseFirestore" }
 
 #Gson
-#gson = {module = "com.google.code.gson:gson", version="2.8.9"}
+gson = { group = "com.google.code.gson", name = "gson", version = "2.8.8" }
 
 #Image Picker
 #image-picker = {module = "com.github.dhaval2404:imagepicker", version="2.1"}
