--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -46,8 +46,9 @@ firebase-firestore = { group = "com.google.firebase", name = "firebase-firestore
 gson = { group = "com.google.code.gson", name = "gson", version = "2.8.8" }
 
 #Image Picker
-#image-picker = {module = "com.github.dhaval2404:imagepicker", version="2.1"}
+imagepicker = { group = "com.github.dhaval2404", name = "imagepicker", version = "2.1" }
 
+kotlinx-coroutines-play-services = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-play-services", version = "1.3.1" }
 #Jetpack Navigation Component
 androidx-legacy = { group = "androidx.legacy", name = "legacy-support-v4", version = "1.0.0" }
 androidx-navigation-fragment-ktx = { group = "androidx.navigation", name = "navigation-fragment-ktx", version.ref = "navigationFragmentKtx" }
